# forgecode

./: .gitignore  .ignore  CLAUDE.md  Cargo.toml  Cross.toml  README.md  forge.default.json  forge.default.yaml  forge.schema.json  update-formula.sh  update-package.sh
.forge/: setting.yaml.example
.forge/rules/: context7.md  git-workflow.md
.forge/skills/create-rule/: SKILL.md
.forge/skills/create-tool/: SKILL.md
.forge/skills/git-workflow/: SKILL.md
.forge/skills/release-workflow/: SKILL.md
.forge/skills/tdd-workflow/: SKILL.md
.forge/tools/example-tool/: TOOL.md
.github/workflows/: autofix.yml  build-for-test.yml  ci.yml  release.yml  test.yml
crates/forge_api/: Cargo.toml
crates/forge_app/: Cargo.toml
crates/forge_config/: .forge.toml  Cargo.toml
crates/forge_config_adapter/: Cargo.toml
crates/forge_config_adapter/src/: claude_code.rs  claude_md.rs  detector.rs  error.rs  lib.rs  migrate.rs  migration.rs  normalized.rs  rules.rs
crates/forge_config_adapter/src/adapters/: claude.rs  cursor.rs  forge_legacy.rs  mod.rs
crates/forge_domain/: Cargo.toml
crates/forge_infra/: Cargo.toml
crates/forge_repo/: Cargo.toml  build.rs
crates/forge_sandbox/: Cargo.toml
crates/forge_vec_store/: Cargo.toml
crates/forge_vec_store/src/: bridge.rs  chunker.rs  db.rs  embedding.rs  fuzzy.rs  indexer.rs  lib.rs  search.rs  validation.rs  workspace.rs
docs/: coding-red-lines.md  data-upload-protocol-en.md  data-upload-protocol-zh.md  data-upload-protocol.md
plans/: 2026-03-30-fix-crash-and-duplicate-output-v1.md  2026-03-31-sandbox-integration-v1.md  2026-04-02-env-compat-and-crash-fix-v1.md  2026-04-02-unify-forge-config-dir-v1.md  2026-04-03-agent-permission-tools-dir-v1.md  2026-04-03-architecture-fix-v1.md  2026-04-03-claude-code-config-adapter-v1.md  2026-04-03-claude-code-config-adapter-v2.md  2026-04-03-issue-6-dynamic-capabilities-v1.md  2026-04-04-tool-streamable-parallel-v1.md  2026-04-05-merge-from-mirror-v260-v1.md
scripts/: install.sh  test-all.sh
(+115 files in other folders)
