[package]
name = "forge_config_adapter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile.workspace = true
